# NilaiIni

./: .clang-tidy  .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  NilaiIni.ioc  cfg.ini  derisking_sd_dac_i2s.ioc  openocd_gdlink.cfg
Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: dma.c  gpio.c  i2c.c  i2s.c  main.c  spi.c  stm32f4xx_it.c  usart.c
Processes/: DebugUI.cpp  DebugUI.h  MasterApplication.cpp  MasterApplication.h  NilaiTFOConfig.h  WavPlayer.cpp  WavPlayer.h  main.cpp
gd32/: GD32F407RK_FLASH.ld  startup_gd32f407.s
src/: main.cpp  main.h
src/sys/: gd32f4xx_it.c  gd32f4xx_it.h  gd32f4xx_libopt.h  syscall.c  sysmem.c  systick.c  systick.h
